--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,10 @@
             <artifactId>json</artifactId>
             <version>20240303</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+            <version>22.0.1</version>
+        </dependency>
     </dependencies>
 </project>
